# llm_practice

./: .pre-commit-config.yaml  pyproject.toml
agent_practice/newsletter_agent/: README.md  app.py  graph.py  node.py  prompt.py  state.py  tool.py  utils.py
agent_practice/stock_ticker_analysis_agent/: README.md  agent.py  app.py  graph.py  prompt.py  state.py  tool.py
