[project]
name = "llm-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Sungchul Kim",email = "sungchul7039@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "tavily-python (>=0.5.0,<0.6.0)",
    "langgraph (>=0.2.61,<0.3.0)",
    "langchain (>=0.3.14,<0.4.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "langchain-openai (>=0.3.0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"